# TrendSight-Backend

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: Dockerfile  database.py  main.py  models.py  schemas.py  token.py
app/configs/: configs.py  hashing.py  oauth2.py  token.py
app/db/: database.py  redis_client.py
app/repository/: userRepository.py
app/routers/: auth.py  user.py
resources/: Database_Schema.drawio
